# search_templates

./: .gitignore  config.yaml  pyproject.toml  requirements.txt  search_app.py
analyses/: cluster_tags.ipynb  cluster_tags_originals.ipynb  create_tags_data.py  streamlit_app.py
queries/: parent_children_original_tags.txt  parent_children_tags.txt  templates_features_full.txt  templates_features_tmp.txt  templates_with_features.txt
src/: comparing.py  encode_text.py  encode_video.py  get_data.py  text_model.py  video_model.py  video_pipeline.py  video_utils.py
src/downstream_tasks/: caption.py  search.py  vqa.py
src/downstream_tasks/clustering/: clustering.py  dim_reduction.py  plot.py
src/downstream_tasks/search/: search.py
