[tool.poetry]
name = "encode-templates"
version = "0.1.0"
description = ""
authors = ["dorgold46 <dgoldenberg@lightricks.com>"]
readme = "README.md"
packages = [{include = "encode_templates"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
google-cloud-bigquery = "^3.10.0"
pyyaml = "^6.0"
db-dtypes = "^1.1.1"
opencv-python = "^4.7.0.72"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

